# homework_10_web

./: pyproject.toml
quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quoteapp/management/commands/: migrate_mongo_to_postgres.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_rename_description_quote_quote.py  0003_alter_author_fullname_alter_quote_quote.py  0004_alter_author_biography.py  0005_alter_quote_quote.py
quotes/quoteapp/templates/quoteapp/: author.html  base.html  detail.html  index.html  quote.html
quotes/quotes/: settings.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: login.html  password_reset.html  password_reset_confirm.html  password_reset_email.html  signup.html
