[tool.poetry]
name = "homework-10-web"
version = "0.1.0"
description = ""
authors = ["TurMod <turbo.moderator@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_10_web"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "^2.9.7"
mongoengine = "^0.27.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
